----------
v3.0.2-git
----------

[mjr] Fix fatal divide by zero error due to incorrectly named variable.
[jan] Fix type of ansel_shares_users.user_uid column.
[jan] Fix watermark font size preference.
[jan] Make shares table compatible with Oracle.
[jan] Add Danish translation (Erling Preben Hansen <erling@eph.dk>).


------
v3.0.1
------

[mjr] Support nginx style Sendfile headers (Request #12661).
[mjr] Fix cancel button behavior on reporting page (Bug #12667).
[mjr] Prevent protected images from leaking into gallery thumbnails (Bug
      #12668).
[mjr] Fix adding custom watermark (Bug #12634).


------
v3.0.0
------

[mjr] Fixed fatal error when using face widgets.


---------
v3.0.0RC1
---------

[mjr] Fix performing image actions in Lightbox galleries.
[mjr] Fix display of missing widgets.


-----------
v3.0.0beta1
-----------

[mjr] Various fixes for SQLite to work with Ansel.


------
v2.0.2
------

[mjr] Fix auto rotation of images based on orientation exif data (Bug #11441).
[mjr] Honor locked default_download pref (Bug #11325).
[mjr] Fix getting gallery data via the API (maxime@chavagne.net, Bug# 11229).
[mjr] Fix carousel when viewing upload screen in an iFrame (Bug #10889).
[mjr] Fix returning to gallery view after uploading images when viewing Ansel
      in an iFrame (Bug #11209).
[mjr] Fix moving a subgallery to a top level gallery (Bug #11134).
[jan] Fix redirection after setting gallery password (thpo+horde@dotrc.de, Bug
      #11195).


------
v2.0.1
------

[jan] Fix saving portal blocks.
[mjr] Fix issue with carousel display on legacy uploader.
[mjr] Fix issue where gallery still retained image count after it was empties
      of all images when using gallery cache.
[mjr] Fix issue with map not showing when user does not have Horde_Perms::EDIT
      on the gallery (Bug #10762).


----
v2.0
----

[mjr] Add pref to allow explicitly turning off the new ajax uploader.
[mjr] Fix invalid image type errors when uploading in older versions of